# cli-grocery-list

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/utils/: lib.rs
