[package]
name = "cli-grocery-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.29", features = ["derive"] }
csv = "1.1.6"
serde = { version = "1.0.149", features = ["derive"] }
syn = "1.0.105"
